--- a/HTML/CSS/style.css
+++ b/HTML/CSS/style.css
@@ -89,7 +89,7 @@
           padding-right:25px;
           background-color: yellow;
         } */
-        #outer{
+        /* #outer{
           height: 200px;
           width:70px;
           border: 2px solid black;
@@ -112,4 +112,12 @@
 
         #green {
           background-color: green;
-        }
+        } */
+         h2 {
+          display:inline;
+          background-color: pink;
+         }
+         span {
+          display: block;
+          background-color: yellow;
+         }
