--- a/HTML/CSS/style.css
+++ b/HTML/CSS/style.css
@@ -130,7 +130,7 @@
             display: inline-block;
           } */
 
-          h1{
+          /* h1{
             border: 2px solid black;
             width: 33.3%;
           }
@@ -146,4 +146,19 @@
             width: 100px;
             background-color: cornflowerblue;
             margin-left: 10%;
+          } */
+
+          #outer {
+            height: 400px;
+            width: 400px;
+            border: 2px solid black;
+            background-color: pink;
+            font-size: 20px;
+          }
+
+          #inner {
+            height: 100px;
+            width: 200px;
+            background-color: cornflowerblue;
+            font-size: 2em;
           }
