--- a/HTML/CSS/style.css
+++ b/HTML/CSS/style.css
@@ -98,7 +98,7 @@
           height: 50px;
           width: 50px;
           border: 2px solid black;
-          margin: 10px;
+          margin: 10px; /
           border-radius: 50%;
         }
         
@@ -148,7 +148,7 @@
             margin-left: 10%;
           } */
 
-          #outer {
+         /* * #outer {
             height: 400px;
             width: 400px;
             border: 2px solid black;
@@ -158,7 +158,16 @@
 
           #inner {
             height: 100px;
-            width: 200px;
+            width: 100px;
             background-color: cornflowerblue;
-            font-size: 2em;
+            font-size: 1em;
+          } */ */
+
+          button {
+            font-size: 50px;
+            border-radius: 15px;
+            border: 5px solid green;
+            padding-left: 1em;
+            padding-right: 1em;
+
           }
