--- a/HTML/CSS/style13.css
+++ b/HTML/CSS/style13.css
@@ -1,8 +1,18 @@
 div {
-    height: 200px;
-    width: 200px;
-    background-color: rgba(255,0,0,0.5);
+    height: 100px;
+    width: 100px;
+    background-color: #4dff00ff;
+    margin: 0 auto;
+    margin-top: 10px; 
+    transition: margin-top 2s ease-in 0.2s;
 }
-#opacity {
+/* #opacity {
     background-color: #ffa511;
+} */
+
+div:hover {
+    margin-top: 400px;
+    background-color: pink;
+    /* background-color: black;
+    border-radius:50%; */
 }
