--- a/HTML/CSS/style13.css
+++ b/HTML/CSS/style13.css
@@ -1,18 +1,28 @@
-div {
+/* div {
     height: 100px;
     width: 100px;
     background-color: #4dff00ff;
     margin: 0 auto;
     margin-top: 10px; 
     transition: margin-top 2s ease-in 0.2s;
-}
+} */
 /* #opacity {
     background-color: #ffa511;
 } */
 
-div:hover {
+/* div:hover {
     margin-top: 400px;
     background-color: pink;
-    /* background-color: black;
-    border-radius:50%; */
-}
+     background-color: black;
+    border-radius:50%; 
+} */
+
+ div{
+    width: 200px;
+    height: 50px;
+    text-align: center;
+    background-color: #7aa874;
+    /* border: 2px solid black; */
+    margin: 10px auto;
+    box-shadow: 2px 2px 15px black;
+ }
