--- a/HTML/CSS/style13.css
+++ b/HTML/CSS/style13.css
@@ -14,15 +14,39 @@
     margin-top: 400px;
     background-color: pink;
      background-color: black;
-    border-radius:50%; 
+    border-radius:50%;   
 } */
 
- div{
+  /* div{
     width: 200px;
     height: 50px;
     text-align: center;
-    background-color: #7aa874;
-    /* border: 2px solid black; */
+    background-color: #7aa874; 
+    border: 2px solid black; *
     margin: 10px auto;
     box-shadow: 2px 2px 15px black;
+ }  */
+
+ .card {
+    width: 250px;
+    height: 250px;
+    border: 2px solid black;
+    display: inline-block;
+    margin: 10px;
+    border-radius: 5%;
+    box-shadow: 2px 4px 8px black;
+    transition: 2s ;
+
+.desc {
+    padding: 0 4px 0 4px;
+} 
  }
+ img {
+    width: 100%;
+    border-radius: 8px 8px 5px 5px;
+ }
+
+ .card:hover {
+    box-shadow: 4px  8px 16px;
+ }
+
