--- a/HTML/CSS/style13.css
+++ b/HTML/CSS/style13.css
@@ -27,7 +27,7 @@
     box-shadow: 2px 2px 15px black;
  }  */
 
- .card {
+ /* .card {
     width: 250px;
     height: 250px;
     border: 2px solid black;
@@ -45,8 +45,37 @@
     width: 100%;
     border-radius: 8px 8px 5px 5px;
  }
-
  .card:hover {
     box-shadow: 4px  8px 16px;
- }
+ } */
 
+ .face {
+    width: 400px;
+    height: 400px;
+    background-color: #ffa511;
+    border-radius:50%;
+ }
+ .mouth{
+    width: 200px;
+    height: 75px;
+    background-color: orangered;
+    border-radius: 0 0 50px 50px;
+    position: absolute;
+    top: 250px;
+    left: 100px;
+ }
+ .left-eye,
+ .right-eye {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: black;
+    display: inline-block;
+    position: absolute;
+    left: 100px;
+    top: 100px;
+ }
+ .right-eye {
+    left: 250px;
+
+ }
