--- a/HTML/CSS/style14.css
+++ b/HTML/CSS/style14.css
@@ -5,7 +5,15 @@
     margin: 10px auto;
     border: 2px solid black;
     display: flex;
-    flex-direction: column;
+    flex-direction:row;
+     justify-content: flex-start; 
+    /* flex-wrap:wrap; */
+    align-content: baseline;
+}
+#org {
+    align-self:flex-start;
+    /* flex-basis:300px ; */
+    flex: 2 2 100px;
 }
 h1 {
     text-align: center;
