--- a/HTML/CSS/style15.css
+++ b/HTML/CSS/style15.css
@@ -1,22 +1,188 @@
-.container {
+ /* .container {
     width:600px;
     height: 300px;
-    background-color: rgb(3, 32, 32);
+    background-color: lab(86.91% -17.82 85.63);
     border: 2px solid red;
     display: grid;
-    /* grid-template-rows: 70px 70px 70px;
-    grid-template-columns:200px 200px 200px ; */
+    grid-template-rows: 1fr 1fr 1fr; */
+    /* grid-template-columns:200px 200px 200px 200px 200px; */
 
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-    grid-template-columns: repeat(3,1fr);
+    /* grid-template-rows: 1fr 1fr 1fr 1fr; */
+    /* grid-template-columns: repeat(3,1fr); */
     /* row-gap: 10px;
     column-gap: 15px; */
-    grid-gap: 10px;
+    /* grid-gap: 10px; */
+    /* justify-items: center; */
+    /* place-items:center;
 }
 .item {
-    /* width: 100px;
-    height: 10%px; */
+    width: 100px;
+    height:    50px;
     background-color: yellowgreen;
-    border: 2px solid black;
+    border: 2px solid black; 
     text-align: center;
-} 
+}   */
+   /* .box {
+    height: 100px;
+    width: 300px;
+    background-color:pink; */
+
+    /* animation-name: widthAnimate;
+    animation-duration: 3s;
+    animation-timing-function: ease-in;
+    animation-delay: 0;
+    animation-iteration-count: infinite;
+    animation-direction: normal; */
+
+    /* animation: widthAnimate 3s ease-in 0s infinite normal;
+
+   }
+   @keyframes widthAnimate {
+    form {
+        width: 10px;
+        background-color: green;
+    }
+    to {
+        width: 400px;
+        background-color: blue;
+        border-radius: 15px;
+    }
+   }
+   @keyframes fontAnimation { 
+    from {
+        font-size: 20px;
+    }
+    to{ 
+        font-size: 40px;
+    }
+
+   }
+
+   @keyframes colorAnimate {
+    from {
+        background-color: green;
+    }
+    to {
+        background-color: blue;
+    }
+   } */
+
+   /* h1 {
+    background-color: yellow;
+    border: 2px solid black;
+   }
+
+   @media (width: 400px){
+    h1 {
+        background-color: red;
+    }
+   }
+
+   @media (min-width: 400px){
+    h1 {
+        background-color: greenyellow;
+    }
+   } */
+
+/* .box{
+    height: 150px;
+    width: 150px;
+    border: 2px solid black;
+    background-color: pink;
+   }
+.one{ 
+    background-color: aquamarine;
+}
+
+.two {
+    background-color: darksalmon;
+    position: relative;
+    bottom: 50px;
+} */
+
+*{
+    margin: 0;
+    padding: 0;
+    font-family: "Poppins", sans-serif;
+}
+.main_box {
+    background: url("camera.jpg");
+    height: 100vh;
+    background-size: cover;
+}
+
+.btn_one {
+    color: white;
+    font-size: 30px;
+    font-weight: 700;
+    position: absolute;
+    left: 16px;
+    line-height: 40px;
+}
+
+.sidebar_menu {
+    position: fixed;
+    /* left: -300px; */
+    height: 100vh;
+    width: 300px;
+    background-color: rgba(255,255,255,0.2);
+    box-shadow: 0 0 10px rgba(255,255,255,0.5);
+}
+.sidebar_menu.logo {
+    position: absolute;
+    width: 100%;
+    line-height: 60px;
+    box-shadow: 0 0 8px rgba(255, 255, 255, 0.5);
+}
+.sidebar_menu .logo a {
+    position: absolute;
+    left: 50px;
+    color: white;
+    text-decoration: none;
+    font-size:20px;
+    font-weight: 500px;
+}
+.sidebar_menu .btn_two{
+    color: grey;
+    font-size:25px;
+    line-height: 60px;
+    position: absolute;
+    left: 270px;
+    opacity: 0;
+
+}
+
+.sidebar_menu .menu{
+    position: absolute;
+    width: 100%;
+    top: 80px;
+}
+
+.sidebar_menu .menu li {
+    margin-top: 6px;
+    padding: 12px 24px;
+}
+.sidebar_menu .menu i,a{
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+
+}
+.sidebar_menu .menu i {
+    padding: 4px;
+}
+.sidebar_menu .social_media{
+  color: white;  
+  opacity: 0.5;
+  position: absolute;
+  left: 25%;
+  bottom: 50px;
+}
+.sidebar_menu .social_media i {
+  color: white;  
+  opacity: 0.5;
+  padding: 0 5px;
+}
+#check {
+    display: none;
+}
