--- a/HTML/CSS/style15.css
+++ b/HTML/CSS/style15.css
@@ -106,33 +106,37 @@
     font-family: "Poppins", sans-serif;
 }
 .main_box {
-    background: url("camera.jpg");
+    background: url("blue-black.jpg");
     height: 100vh;
     background-size: cover;
 }
 
-.btn_one {
+.btn_one i {
     color: white;
     font-size: 30px;
     font-weight: 700;
     position: absolute;
     left: 16px;
     line-height: 40px;
+    cursor: pointer;
+    transition: all 0.3s linear;
 }
 
 .sidebar_menu {
     position: fixed;
-    /* left: -300px; */
+    left: -300px;
     height: 100vh;
     width: 300px;
     background-color: rgba(255,255,255,0.2);
     box-shadow: 0 0 10px rgba(255,255,255,0.5);
+    transition: all 0.3s linear;
 }
-.sidebar_menu.logo {
+.sidebar_menu .logo {
     position: absolute;
     width: 100%;
     line-height: 60px;
-    box-shadow: 0 0 8px rgba(255, 255, 255, 0.5);
+    box-shadow: 0 4px 8px rgba(255, 255, 255, 0.5);
+    height:60px;
 }
 .sidebar_menu .logo a {
     position: absolute;
@@ -142,13 +146,14 @@
     font-size:20px;
     font-weight: 500px;
 }
-.sidebar_menu .btn_two{
+.sidebar_menu .btn_two i{
     color: grey;
     font-size:25px;
     line-height: 60px;
     position: absolute;
     left: 270px;
     opacity: 0;
+    cursor: pointer;
 
 }
 
@@ -172,17 +177,41 @@
     padding: 4px;
 }
 .sidebar_menu .social_media{
-  color: white;  
-  opacity: 0.5;
+  /* color: white; 
+  opacity: 0.5; */
   position: absolute;
   left: 25%;
   bottom: 50px;
 }
-.sidebar_menu .social_media i {
-  color: white;  
-  opacity: 0.5;
+.sidebar_menu .social_media i { 
+  color:blue; 
+  opacity: 1;
   padding: 0 5px;
 }
 #check {
     display: none;
+}
+.sidebar_menu .menu li:hover {
+    box-shadow: 0 0 4px rgba(255,255,255,0.5);
+}
+.btn_one i:hover{
+    font-size: 35px;
+}
+.btn_two i:hover{
+    font-size: 30px;
+}
+.sidebar_menu .social_media i:hover {
+    opacity:2;
+    color: blue;
+    transform: scale(1.3);
+}
+#check:checked ~ .sidebar_menu {
+    left: 0;
+}
+
+#check:checked ~.btn_one i{
+    opacity: 0;
+}
+#check:checked ~ .sidebar_menu .btn_two i{
+    opacity:1;
 }
